Created another bitstream reader that implements IBitStream but can set position to anywhere in stream. Added function in DemoParser that lets you go to any tick in the demo.

--- a/DemoInfo/DemoInfo.csproj
+++ b/DemoInfo/DemoInfo.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitStream\BitStreamFromStream.cs" />
+    <Compile Include="BitStream\DataParser.cs" />
     <Compile Include="DemoParser.cs" />
     <Compile Include="DP\DemoPacketParser.cs" />
     <Compile Include="DP\Entity.cs" />
